--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goit-react-hw-04-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mariiaholovchenko.github.io/goit-react-hw-04-phonebook/",
+  "homepage": "https://mur808.github.io/goit-react-hw-04-phonebook/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
